... ... + ULTIMA Sil + Lyra Economy 795 Bad key, no time!!!

--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>24 июл:  <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент:&#xa;Новые диски алмазные ТУРБО, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
+  <DT>14 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпильки резьбовые оцинкованные,&#xa;1000 и 2000 мм, класс прочности 4.8"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
+  <DT>13 июл:  <DD><a href="/catalog/cat172.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Коронки по бетону в сборе с центрирующим сверлом:&#xa;- Коронки по бетону, хвостовик SDS+ HAGWERT;&#xa;- Коронка по бетону, хвостовик SDS Max BERGEN;&#xa;- Коронка алмазная по бетону, SDS+ РОСОМАХА;&#xa;- Коронка ударная по армир. бетону, SDS+ РОСОМАХА"><span class="title">Коронки по бетону</span><span class="dop"> в сборе</span></a><br>
   <DT>29 июн:  <DD><a href="/catalog/cat105.shtml" title="Расширен ассортимент:&#xa;Тачки строительные и колёса к ним"><span class="title">Тачки строительные</span><span class="dop"></span></a><br>
   <DT>26 июн:  <DD><a href="/catalog/cat72.shtml"  title="Новые товары:&#xa;Рулетки геодезические &laquo;ULTIMA&raquo;,&#xa;открытый корпус, металлическая лента"><span class="title">Рулетки геодезические</span><span class="dop"></span></a><br>
   <DT>23 июн:  <DD><a href="/catalog/cat299.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Коронки алмазные с центрирующим сверлом по керамограниту и керамике"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
