--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,6 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>21 сен:  <DD><a href="/catalog/cat28.shtml" title="Цены снижены:&#xa;Диски алмазные 'РОСОМАХА'"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
+  <DT>25 сен:  <DD><a href="/catalog/cat176.shtml" title="Новые товары:&#xa;Силикон санитарный универсальный ULTIMA, 280 мл&#xa;цвета: белый и бесцветный"><span class="title">Силикон санитарный</span><span class="dop"> ULTIMA</span></a><br>
+  <DT>24 сен:  <DD><a href="/catalog/cat610.shtml" title="Новый товар:&#xa;Мелок восковой универсальный маркировочный Lyra Economy 795&#xa;БЕЛЫЙ, 110 x 11 мм"><span class="title">Мелок восковой</span><span class="dop"> Lyra 795</span></a><br>
+  <DT>21 сен:  <DD><a href="/catalog/cat28.shtml"  title="Цены снижены:&#xa;Диски алмазные 'РОСОМАХА'"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>19 сен:  <DD><a href="/catalog/cat78.shtml"  title="Цены снижены:&#xa;Свёрла по дереву перьевые 'BERGEN'"><span class="title">Свёрла</span><span class="dop"></span></a> <a href="/catalog/cat422.shtml" title="Цены снижены:&#xa;Свёрла по дереву спиральные 'BERGEN'"><span class="title">по дереву</span><span class="dop"> BERGEN</span></a><br>
   <DT>03 сен:  <DD><a href="/catalog/cat189.shtml" title="Цены снижены:&#xa;Чашки алмазные зачистные BERGEN:&#xa;TURBO, двухрядная, 'БУМЕРАНГ'"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
   <DT>31 авг : <DD><a href="/catalog/cat221.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпатели фасадные и шпательные лопатки"><span class="title">Шпатели</span><span class="dop"> профессиональные</span></a><br>
@@ -8,9 +10,6 @@
   <DT>06 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
   <DT>04 авг : <DD><a href="/catalog/cat30.shtml"  title="Цены снижены:&#xa;Шлифовальная шкурка в рулонах, на тканевой основе, водостойкая&#xa;ГОСТ 13344-79, пр-во г. Белгород"><span class="title">Шлифовальная шкурка</span><span class="dop" style="font-size: smaller"> в рулонах</span></a><br>
   <DT>27 июл:  <DD><a href="/catalog/cat597.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Стрейч &mdash; Паллетная плёнка полимерная"><span class="title">Паллетная плёнка</span><span class="dop"> стрейч</span></a><br>
-  <DT>24 июл:  <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент:&#xa;Новые диски алмазные ТУРБО, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
-  <DT>14 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпильки резьбовые оцинкованные,&#xa;1000 и 2000 мм, класс прочности 4.8"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
-  <DT>13 июл:  <DD><a href="/catalog/cat172.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Коронки по бетону в сборе с центрирующим сверлом:&#xa;- Коронки по бетону, хвостовик SDS+ HAGWERT;&#xa;- Коронка по бетону, хвостовик SDS Max BERGEN;&#xa;- Коронка алмазная по бетону, SDS+ РОСОМАХА;&#xa;- Коронка ударная по армир. бетону, SDS+ РОСОМАХА"><span class="title">Коронки по бетону</span><span class="dop"> в сборе</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
