--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>12 окт:  <DD><a href="/catalog/cat139.shtml" title="Новый товар:&#xa;Молоток слесарный VOLKSHAMMER, 0.5 кг"><span class="title">Молоток слесар.</span><span class="dop"> Volkshammer</span></a><br>
   <DT>25 сен:  <DD><a href="/catalog/cat176.shtml" title="Новые товары:&#xa;Силикон санитарный универсальный ULTIMA, 280 мл&#xa;цвета: белый и бесцветный"><span class="title">Силикон санитарный</span><span class="dop"> ULTIMA</span></a><br>
   <DT>24 сен:  <DD><a href="/catalog/cat610.shtml" title="Новый товар:&#xa;Мелок восковой универсальный маркировочный Lyra Economy 795&#xa;БЕЛЫЙ, 110 x 11 мм"><span class="title">Мелок восковой</span><span class="dop"> Lyra 795</span></a><br>
   <DT>21 сен:  <DD><a href="/catalog/cat28.shtml"  title="Цены снижены:&#xa;Диски алмазные 'РОСОМАХА'"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
