--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>26 окт:  <DD><a href="/catalog/cat496.shtml" title="Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 8х70 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">Болты</span></a>, <a href="/catalog/cat495.shtml" title="Гайки ГОСТ 5915-70 оцинкованные,&#xa;резьба от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">гайки</span></a>, <a href="/catalog/cat494.shtml" title="Шайбы оцинкованные, плоские и увеличеннные,&#xa;под резьбу от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">шайбы</span></a><br>
+  <DT>22 окт:  <DD><a href="/catalog/cat227.shtml" title="Новый товар:&#xa;Фонарь-прожектор аккумуляторный светодиодный&#xa;КОСМОС K-9199, 12 LED, дальность свечения 100 метров"><span class="title">Фонарь светодиодный</span><span class="dop"> КОСМОС</span></a><br>
   <DT>12 окт:  <DD><a href="/catalog/cat139.shtml" title="Новый товар:&#xa;Молоток слесарный VOLKSHAMMER, 0.5 кг"><span class="title">Молоток слесар.</span><span class="dop"> Volkshammer</span></a><br>
   <DT>25 сен:  <DD><a href="/catalog/cat176.shtml" title="Новые товары:&#xa;Силикон санитарный универсальный ULTIMA, 280 мл&#xa;цвета: белый и бесцветный"><span class="title">Силикон санитарный</span><span class="dop"> ULTIMA</span></a><br>
   <DT>24 сен:  <DD><a href="/catalog/cat610.shtml" title="Новый товар:&#xa;Мелок восковой универсальный маркировочный Lyra Economy 795&#xa;БЕЛЫЙ, 110 x 11 мм"><span class="title">Мелок восковой</span><span class="dop"> Lyra 795</span></a><br>
