--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>03 ноя:  <DD><a href="/catalog/cat440.shtml" title="Новый товар:&#xa;Салфетки влажные антибактериальные,&#xa;в упаковках по 100 штук"><span class="title">Салфетки</span><span class="dop"> антибактериальные</span></a><br>
   <DT>26 окт:  <DD><a href="/catalog/cat496.shtml" title="Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 8х70 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">Болты</span></a>, <a href="/catalog/cat495.shtml" title="Гайки ГОСТ 5915-70 оцинкованные,&#xa;резьба от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">гайки</span></a>, <a href="/catalog/cat494.shtml" title="Шайбы оцинкованные, плоские и увеличеннные,&#xa;под резьбу от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">шайбы</span></a><br>
   <DT>22 окт:  <DD><a href="/catalog/cat227.shtml" title="Новый товар:&#xa;Фонарь-прожектор аккумуляторный светодиодный&#xa;КОСМОС K-9199, 12 LED, дальность свечения 100 метров"><span class="title">Фонарь светодиодный</span><span class="dop"> КОСМОС</span></a><br>
   <DT>12 окт:  <DD><a href="/catalog/cat139.shtml" title="Новый товар:&#xa;Молоток слесарный VOLKSHAMMER, 0.5 кг"><span class="title">Молоток слесар.</span><span class="dop"> Volkshammer</span></a><br>
@@ -12,7 +13,6 @@
   <DT>10 авг : <DD><a href="/catalog/cat177.shtml" title="Цены снижены:&#xa;Изолента ПВХ HOBBI, разные цвета и размеры"><span class="title">Изолента ПВХ</span><span class="dop"></span></a><br>
   <DT>06 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
   <DT>04 авг : <DD><a href="/catalog/cat30.shtml"  title="Цены снижены:&#xa;Шлифовальная шкурка в рулонах, на тканевой основе, водостойкая&#xa;ГОСТ 13344-79, пр-во г. Белгород"><span class="title">Шлифовальная шкурка</span><span class="dop" style="font-size: smaller"> в рулонах</span></a><br>
-  <DT>27 июл:  <DD><a href="/catalog/cat597.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Стрейч &mdash; Паллетная плёнка полимерная"><span class="title">Паллетная плёнка</span><span class="dop"> стрейч</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
