--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 июл:  <DD><a href="/catalog/cat597.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Стрейч &mdash; Паллетная плёнка полимерная"><span class="title">Паллетная плёнка</span><span class="dop"> стрейч</span></a><br>
   <DT>24 июл:  <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент:&#xa;Новые диски алмазные ТУРБО, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>14 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпильки резьбовые оцинкованные,&#xa;1000 и 2000 мм, класс прочности 4.8"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
   <DT>13 июл:  <DD><a href="/catalog/cat172.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Коронки по бетону в сборе с центрирующим сверлом:&#xa;- Коронки по бетону, хвостовик SDS+ HAGWERT;&#xa;- Коронка по бетону, хвостовик SDS Max BERGEN;&#xa;- Коронка алмазная по бетону, SDS+ РОСОМАХА;&#xa;- Коронка ударная по армир. бетону, SDS+ РОСОМАХА"><span class="title">Коронки по бетону</span><span class="dop"> в сборе</span></a><br>
