--- a/-chg/ssi/infoblk.html
+++ b/-chg/ssi/infoblk.html
@@ -5,3 +5,8 @@
   <a href="/about/contact.shtml" title="Схема проезда">Москва, ул. Южнопортовая, д. 13, стр. 2</a>
   пн - пт.  Офис с 8 до 17:30.  Склад с 8 до 17:15
 </p>
+
+
+  <a href="/about/contact.shtml#map" title="Схема проезда">Москва, ул. Южнопортовая, д. 13, стр. 2</a></p>
+  <p class="adres time">С понедельника по пятницу, с <b>9</b> до <b>17</b></p>
+  <p class="adres cm">Заявки онлайн круглосуточно
