--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 ноя:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
+  <DT>26 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл"><span class="title">Пена монтажная</span><span class="dop"> Sila ЗИМНЯЯ</span></a><br>
   <DT>03 ноя:  <DD><a href="/catalog/cat440.shtml" title="Новый товар:&#xa;Салфетки влажные антибактериальные,&#xa;в упаковках по 100 штук"><span class="title">Салфетки</span><span class="dop"> антибактериальные</span></a><br>
   <DT>26 окт:  <DD><a href="/catalog/cat496.shtml" title="Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 8х70 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">Болты</span></a>, <a href="/catalog/cat495.shtml" title="Гайки ГОСТ 5915-70 оцинкованные,&#xa;резьба от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">гайки</span></a>, <a href="/catalog/cat494.shtml" title="Шайбы оцинкованные, плоские и увеличеннные,&#xa;под резьбу от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">шайбы</span></a><br>
   <DT>22 окт:  <DD><a href="/catalog/cat227.shtml" title="Новый товар:&#xa;Фонарь-прожектор аккумуляторный светодиодный&#xa;КОСМОС K-9199, 12 LED, дальность свечения 100 метров"><span class="title">Фонарь светодиодный</span><span class="dop"> КОСМОС</span></a><br>
@@ -9,10 +11,6 @@
   <DT>21 сен:  <DD><a href="/catalog/cat28.shtml"  title="Цены снижены:&#xa;Диски алмазные 'РОСОМАХА'"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>19 сен:  <DD><a href="/catalog/cat78.shtml"  title="Цены снижены:&#xa;Свёрла по дереву перьевые 'BERGEN'"><span class="title">Свёрла</span><span class="dop"></span></a> <a href="/catalog/cat422.shtml" title="Цены снижены:&#xa;Свёрла по дереву спиральные 'BERGEN'"><span class="title">по дереву</span><span class="dop"> BERGEN</span></a><br>
   <DT>03 сен:  <DD><a href="/catalog/cat189.shtml" title="Цены снижены:&#xa;Чашки алмазные зачистные BERGEN:&#xa;TURBO, двухрядная, 'БУМЕРАНГ'"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
-  <DT>31 авг : <DD><a href="/catalog/cat221.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпатели фасадные и шпательные лопатки"><span class="title">Шпатели</span><span class="dop"> профессиональные</span></a><br>
-  <DT>10 авг : <DD><a href="/catalog/cat177.shtml" title="Цены снижены:&#xa;Изолента ПВХ HOBBI, разные цвета и размеры"><span class="title">Изолента ПВХ</span><span class="dop"></span></a><br>
-  <DT>06 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
-  <DT>04 авг : <DD><a href="/catalog/cat30.shtml"  title="Цены снижены:&#xa;Шлифовальная шкурка в рулонах, на тканевой основе, водостойкая&#xa;ГОСТ 13344-79, пр-во г. Белгород"><span class="title">Шлифовальная шкурка</span><span class="dop" style="font-size: smaller"> в рулонах</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
