--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,9 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>31 авг : <DD><a href="/catalog/cat221.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпатели фасадные и шпательные лопатки"><span class="title">Шпатели</span><span class="dop"> профессиональные</span></a><br>
+  <DT>10 авг : <DD><a href="/catalog/cat177.shtml" title="Цены снижены:&#xa;Изолента ПВХ HOBBI, разные цвета и размеры"><span class="title">Изолента ПВХ</span><span class="dop"></span></a><br>
+  <DT>06 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
+  <DT>04 авг : <DD><a href="/catalog/cat30.shtml"  title="Цены снижены:&#xa;Шлифовальная шкурка в рулонах, на тканевой основе, водостойкая&#xa;ГОСТ 13344-79, пр-во г. Белгород"><span class="title">Шлифовальная шкурка</span><span class="dop" style="font-size: smaller"> в рулонах</span></a><br>
   <DT>27 июл:  <DD><a href="/catalog/cat597.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены!&#xa;Стрейч &mdash; Паллетная плёнка полимерная"><span class="title">Паллетная плёнка</span><span class="dop"> стрейч</span></a><br>
   <DT>24 июл:  <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент:&#xa;Новые диски алмазные ТУРБО, РОСОМАХА"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>14 июл:  <DD><a href="/catalog/cat32.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпильки резьбовые оцинкованные,&#xa;1000 и 2000 мм, класс прочности 4.8"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
