3 + cat120+cat418 del + Sila Pro TopGun 70->recd

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -17,13 +17,13 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/shmal/big/aero-ultima.png" title="Большое фото: Аэрозольная эмаль универсальная 'ULTIMA'">
-        <img src="/img/pic/shmal/small/aero-ultima_w.png" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat295.shtml"
-        title="Аэрозольная эмаль универсальная 'ULTIMA' на нашем сайте">
+        href="/img/pic/foam/big/A1478Z.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл">
+        <img src="/img/pic/foam/small/A1478Zw.jpg" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat175.shtml"
+        title="Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл&#xa;на нашем сайте">
         <p>
-          <span class="title">Аэрозольные<br>эмаль универсальная<br>и краска-грунт</span><span class="dop"><br>ULTIMA,</span>
-          <span class="addt"> 520 мл</span>
+          <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 70 ЗИМНЯЯ,</span>
+          <span class="addt"> 880 мл</span>
         </p></a></td></table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
