--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -852,3 +852,14 @@
         <span class="title">Строительные рулетки</span><span class="dop"> EFFECTA:</span>
         <span class="addt"><br>ударопрочный обрезиненный корпус,<br>неодимовые магниты,<br>доп. боковые зацепы</span>
       </p></a></td></table>
+<table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/shmal/big/aero-ultima.png" title="Большое фото: Аэрозольная эмаль универсальная 'ULTIMA'">
+      <img src="/img/pic/shmal/small/aero-ultima_w.png" width="98"></a></td>
+    <td class="good-txt"><a href="/catalog/cat295.shtml"
+      title="Аэрозольная эмаль универсальная 'ULTIMA' на нашем сайте">
+      <p>
+        <span class="title">Аэрозольные<br>эмаль универсальная<br>и краска-грунт</span><span class="dop"><br>ULTIMA,</span>
+        <span class="addt"> 520 мл</span>
+      </p></a></td></table>
