--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,9 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>27 ноя:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
+  <DT>21 сен:  <DD><a href="/catalog/cat28.shtml"  title="Цены снижены:&#xa;Диски алмазные 'РОСОМАХА'"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
+  <DT>19 сен:  <DD><a href="/catalog/cat78.shtml"  title="Цены снижены:&#xa;Свёрла по дереву перьевые 'BERGEN'"><span class="title">Свёрла</span><span class="dop"></span></a> <a href="/catalog/cat422.shtml" title="Цены снижены:&#xa;Свёрла по дереву спиральные 'BERGEN'"><span class="title">по дереву</span><span class="dop"> BERGEN</span></a><br>
+  <DT>03 сен:  <DD><a href="/catalog/cat189.shtml" title="Цены снижены:&#xa;Чашки алмазные зачистные BERGEN:&#xa;TURBO, двухрядная, 'БУМЕРАНГ'"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
   <DT>31 авг : <DD><a href="/catalog/cat221.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Шпатели фасадные и шпательные лопатки"><span class="title">Шпатели</span><span class="dop"> профессиональные</span></a><br>
   <DT>10 авг : <DD><a href="/catalog/cat177.shtml" title="Цены снижены:&#xa;Изолента ПВХ HOBBI, разные цвета и размеры"><span class="title">Изолента ПВХ</span><span class="dop"></span></a><br>
   <DT>06 авг : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1"><span class="title">Круги шлифовальные</span><span class="dop"> КЛТ1</span></a><br>
