--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <DT>27 ноя:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
+  <DT>25 сен:  <DD><a href="/catalog/cat176.shtml" title="Новые товары:&#xa;Силикон санитарный универсальный ULTIMA, 280 мл&#xa;цвета: белый и бесцветный"><span class="title">Силикон санитарный</span><span class="dop"> ULTIMA</span></a><br>
+  <DT>24 сен:  <DD><a href="/catalog/cat610.shtml" title="Новый товар:&#xa;Мелок восковой универсальный маркировочный Lyra Economy 795&#xa;БЕЛЫЙ, 110 x 11 мм"><span class="title">Мелок восковой</span><span class="dop"> Lyra 795</span></a><br>
   <DT>21 сен:  <DD><a href="/catalog/cat28.shtml"  title="Цены снижены:&#xa;Диски алмазные 'РОСОМАХА'"><span class="title">Диски алмазные</span><span class="dop"> РОСОМАХА</span></a><br>
   <DT>19 сен:  <DD><a href="/catalog/cat78.shtml"  title="Цены снижены:&#xa;Свёрла по дереву перьевые 'BERGEN'"><span class="title">Свёрла</span><span class="dop"></span></a> <a href="/catalog/cat422.shtml" title="Цены снижены:&#xa;Свёрла по дереву спиральные 'BERGEN'"><span class="title">по дереву</span><span class="dop"> BERGEN</span></a><br>
   <DT>03 сен:  <DD><a href="/catalog/cat189.shtml" title="Цены снижены:&#xa;Чашки алмазные зачистные BERGEN:&#xa;TURBO, двухрядная, 'БУМЕРАНГ'"><span class="title">Чашки алмазные зачистные</span><span class="dop"></span></a><br>
