--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,15 +1,15 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>06 янв:  <DD><a href="/catalog/cat230.shtml" title="Цены снижены и расширен ассортимент:&#xa;Свёрла по металлу BERGEN"><span class="title">Свёрла</span></a> <a href="/catalog/cat415.shtml"  title="Расширен ассортимент:&#xa;Свёрла по металлу BERGEN твердосплавные кобальтовые"><span class="title">по металлу</span><span class="dop"> BERGEN</span></a><br>
+  <DT>04 янв:  <DD><a href="/catalog/cat48.shtml"  title="Цены снижены:&#xa;Буры по бетону для перфоратора SDS Max BERGEN"><span class="title">Буры по бетону SDS Max</span><span class="dop"> BERGEN</span></a><br>
   <DT>31 дек:  <DD>Диски <a href="/catalog/cat29.shtml" title="Новый ассортимент:&#xa;Диски пильные BERGEN и РОСОМАХА"><span class="title">пильные</span></a> и <a href="/catalog/cat28.shtml" title="Новый ассортимент:&#xa;Диски алмазные BERGEN и РОСОМАХА"><span class="title">алмазные</span></a><br>
-  <DT>31 дек:  <DD><a href="/catalog/cat47.shtml"  title="Цены снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ BERGEN"><span class="title">Буры по бетону SDS+</span><span class="dop"> BERGEN</span></a><br>
+  <DT>30 дек:  <DD><a href="/catalog/cat47.shtml"  title="Цены снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ BERGEN"><span class="title">Буры по бетону SDS+</span><span class="dop"> BERGEN</span></a><br>
   <DT>22 дек:  <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Клей монтажный SILFIX StrongClear прозрачный, 290 мл"><span class="title">Клей монтажный</span><span class="dop"> SILFIX</span></a><br>
   <DT>26 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл"><span class="title">Пена монтажная</span><span class="dop"> Sila ЗИМНЯЯ</span></a><br>
   <DT>03 ноя:  <DD><a href="/catalog/cat440.shtml" title="Новый товар:&#xa;Салфетки влажные антибактериальные,&#xa;в упаковках по 100 штук"><span class="title">Салфетки</span><span class="dop"> антибактериальные</span></a><br>
   <DT>26 окт:  <DD><a href="/catalog/cat496.shtml" title="Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 8х70 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">Болты</span></a>, <a href="/catalog/cat495.shtml" title="Гайки ГОСТ 5915-70 оцинкованные,&#xa;резьба от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">гайки</span></a>, <a href="/catalog/cat494.shtml" title="Шайбы оцинкованные, плоские и увеличеннные,&#xa;под резьбу от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">шайбы</span></a><br>
   <DT>22 окт:  <DD><a href="/catalog/cat227.shtml" title="Новый товар:&#xa;Фонарь-прожектор аккумуляторный светодиодный&#xa;КОСМОС K-9199, 12 LED, дальность свечения 100 метров"><span class="title">Фонарь светодиодный</span><span class="dop"> КОСМОС</span></a><br>
   <DT>12 окт:  <DD><a href="/catalog/cat139.shtml" title="Новый товар:&#xa;Молоток слесарный VOLKSHAMMER, 0.5 кг"><span class="title">Молоток слесар.</span><span class="dop"> Volkshammer</span></a><br>
-  <DT>25 сен:  <DD><a href="/catalog/cat176.shtml" title="Новые товары:&#xa;Силикон санитарный универсальный ULTIMA, 280 мл&#xa;цвета: белый и бесцветный"><span class="title">Силикон санитарный</span><span class="dop"> ULTIMA</span></a><br>
-  <DT>24 сен:  <DD><a href="/catalog/cat610.shtml" title="Новый товар:&#xa;Мелок восковой универсальный маркировочный Lyra Economy 795&#xa;БЕЛЫЙ, 110 x 11 мм"><span class="title">Мелок восковой</span><span class="dop"> Lyra 795</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
