Keys + Coppers + Cups

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,11 +1,12 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>13 янв:  <DD><a href="/catalog/cat248.shtml" title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Омеднённый инструмент</span><span class="dop"></span></a><br>
+  <DT>12 янв:  <DD><a href="/catalog/cat55.shtml"  title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Гаечные ключи</span><span class="dop"></span></a><br>
   <DT>06 янв:  <DD><a href="/catalog/cat230.shtml" title="Цены снижены и расширен ассортимент:&#xa;Свёрла по металлу BERGEN"><span class="title">Свёрла</span></a> <a href="/catalog/cat415.shtml"  title="Расширен ассортимент:&#xa;Свёрла по металлу BERGEN твердосплавные кобальтовые"><span class="title">по металлу</span><span class="dop"> BERGEN</span></a><br>
   <DT>04 янв:  <DD><a href="/catalog/cat48.shtml"  title="Цены снижены:&#xa;Буры по бетону для перфоратора SDS Max BERGEN"><span class="title">Буры по бетону SDS Max</span><span class="dop"> BERGEN</span></a><br>
   <DT>31 дек:  <DD>Диски <a href="/catalog/cat29.shtml" title="Новый ассортимент:&#xa;Диски пильные BERGEN и РОСОМАХА"><span class="title">пильные</span></a> и <a href="/catalog/cat28.shtml" title="Новый ассортимент:&#xa;Диски алмазные BERGEN и РОСОМАХА"><span class="title">алмазные</span></a><br>
   <DT>30 дек:  <DD><a href="/catalog/cat47.shtml"  title="Цены снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ BERGEN"><span class="title">Буры по бетону SDS+</span><span class="dop"> BERGEN</span></a><br>
   <DT>22 дек:  <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Клей монтажный SILFIX StrongClear прозрачный, 290 мл"><span class="title">Клей монтажный</span><span class="dop"> SILFIX</span></a><br>
-  <DT>26 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл"><span class="title">Пена монтажная</span><span class="dop"> Sila ЗИМНЯЯ</span></a><br>
   <DT>03 ноя:  <DD><a href="/catalog/cat440.shtml" title="Новый товар:&#xa;Салфетки влажные антибактериальные,&#xa;в упаковках по 100 штук"><span class="title">Салфетки</span><span class="dop"> антибактериальные</span></a><br>
   <DT>26 окт:  <DD><a href="/catalog/cat496.shtml" title="Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 8х70 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">Болты</span></a>, <a href="/catalog/cat495.shtml" title="Гайки ГОСТ 5915-70 оцинкованные,&#xa;резьба от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">гайки</span></a>, <a href="/catalog/cat494.shtml" title="Шайбы оцинкованные, плоские и увеличеннные,&#xa;под резьбу от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">шайбы</span></a><br>
   <DT>22 окт:  <DD><a href="/catalog/cat227.shtml" title="Новый товар:&#xa;Фонарь-прожектор аккумуляторный светодиодный&#xa;КОСМОС K-9199, 12 LED, дальность свечения 100 метров"><span class="title">Фонарь светодиодный</span><span class="dop"> КОСМОС</span></a><br>
@@ -16,45 +17,12 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/foam/big/A1478Z.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл">
-        <img src="/img/pic/foam/small/A1478Zw.jpg" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat175.shtml"
-        title="Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл&#xa;на нашем сайте">
-        <p>
-          <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 70 ЗИМНЯЯ,</span>
-          <span class="addt"> 880 мл</span>
-        </p></a></td></table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
-      <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/drill/big/cobalt-sverlo.jpg" title="Большое фото: Твердосплавные свёрла по металлу 'HAGWERT'">
-        <img src="/img/pic/drill/small/cobalt-sverlo.jpg" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat415.shtml"
-        title="Твердосплавные свёрла по металлу 'HAGWERT' на нашем сайте">
-        <p>
-          <span class="title">Твердосплавные свёрла по металлу</span><span class="dop"><br>HAGWERT<br>"Power-Сobalt"</span>
-          <span class="addt"><br>фрезерованные шлифованные</span>
-        </p></a></td></table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
-      <td align="center" width=1><a class="cboxElement"
         href="/img/pic/abraz/big/Krug%20Luga.jpg" title="Большое фото: Круги отрезные по металлу (Луга)">
         <img src="/img/pic/abraz/small/Krug%20Luga.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat24.shtml"
         title="Круги отрезные по металлу (пр-во г. Луга) на нашем сайте">
         <p>
           <span class="title">Круги отрезные по&nbsp;металлу</span><span class="dop"><br>(пр-во Лужского Абразивного Завода),</span>
-          <span class="addt"><br>разные размеры</span>
-        </p></a></td></table>
-  <table class="one-good" cellpadding="0">
-    <tr valign="top">
-      <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/drill/big/bury-hagwert.jpg" title="Большое фото: Буры по бетону для перфоратора SDS+ 'HAGWERT'">
-        <img src="/img/pic/drill/small/bury-hagwert.jpg" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat414.shtml"
-        title="Буры по бетону для перфоратора SDS+ 'HAGWERT' на нашем сайте">
-        <p>
-          <span class="title">Твердосплавные буры по бетону<br>для перфоратора SDS+</span><span class="dop"> HAGWERT,</span>
           <span class="addt"><br>разные размеры</span>
         </p></a></td></table>
   <table class="one-good" cellpadding="0">
