--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>26 ноя:  <DD><a href="/catalog/cat175.shtml" title="Новый товар:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл"><span class="title">Пена монтажная</span><span class="dop"> Sila ЗИМНЯЯ</span></a><br>
   <DT>27 ноя:  <DD><a href="/catalog/cat414.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ HAGWERT"><span class="title">Буры по бетону SDS+</span><span class="dop"> HAGWERT</span></a><br>
   <DT>25 сен:  <DD><a href="/catalog/cat176.shtml" title="Новые товары:&#xa;Силикон санитарный универсальный ULTIMA, 280 мл&#xa;цвета: белый и бесцветный"><span class="title">Силикон санитарный</span><span class="dop"> ULTIMA</span></a><br>
   <DT>24 сен:  <DD><a href="/catalog/cat610.shtml" title="Новый товар:&#xa;Мелок восковой универсальный маркировочный Lyra Economy 795&#xa;БЕЛЫЙ, 110 x 11 мм"><span class="title">Мелок восковой</span><span class="dop"> Lyra 795</span></a><br>
@@ -868,4 +869,37 @@
       <p>
         <span class="title">Аэрозольные<br>эмаль универсальная<br>и краска-грунт</span><span class="dop"><br>ULTIMA,</span>
         <span class="addt"> 520 мл</span>
+      </p></a></td></table>
+<table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/drill/big/bury-hagwert.jpg" title="Большое фото: Буры по бетону для перфоратора SDS+ 'HAGWERT'">
+      <img src="/img/pic/drill/small/bury-hagwert.jpg" width="98"></a></td>
+    <td class="good-txt"><a href="/catalog/cat414.shtml"
+      title="Буры по бетону для перфоратора SDS+ 'HAGWERT' на нашем сайте">
+      <p>
+        <span class="title">Твердосплавные буры по бетону<br>для перфоратора SDS+</span><span class="dop"> HAGWERT,</span>
+        <span class="addt"><br>разные размеры</span>
+      </p></a></td></table>
+<table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/drill/big/cobalt-sverlo.jpg" title="Большое фото: Твердосплавные свёрла по металлу 'HAGWERT'">
+      <img src="/img/pic/drill/small/cobalt-sverlo.jpg" width="98"></a></td>
+    <td class="good-txt"><a href="/catalog/cat415.shtml"
+      title="Твердосплавные свёрла по металлу 'HAGWERT' на нашем сайте">
+      <p>
+        <span class="title">Твердосплавные свёрла по металлу</span><span class="dop"><br>HAGWERT<br>"Power-Сobalt"</span>
+        <span class="addt"><br>фрезерованные шлифованные</span>
+      </p></a></td></table>
+<table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/foam/big/A1478Z.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл">
+      <img src="/img/pic/foam/small/A1478Zw.jpg" width="98"></a></td>
+    <td class="good-txt"><a href="/catalog/cat175.shtml"
+      title="Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 70 ЗИМНЯЯ, 880 мл&#xa;на нашем сайте">
+      <p>
+        <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 70 ЗИМНЯЯ,</span>
+        <span class="addt"> 880 мл</span>
       </p></a></td></table>
