Sam + Eld + dels

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -28,6 +28,17 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
+        href="/img/pic/foam/big/SPTG65w.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл">
+        <img src="/img/pic/foam/small/SPTG65ww.png" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat175.shtml"
+        title="Пена монтажная пистолетная профессиональная&#xa;Sila Pro TopGun 65 Winter, 875 мл&#xa;на нашем сайте">
+        <p>
+          <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 65 Winter,</span>
+          <span class="addt"> 875 мл</span>
+        </p></a></td></table>
+  <table class="one-good" cellpadding="0">
+    <tr valign="top">
+      <td align="center" width=1><a class="cboxElement"
         href="/img/pic/drill/big/Koronka po keramike art 576230 newe ru.jpg" title="Большое фото: Алмазные коронки по керамограниту и керамике 'HAGWERT'">
         <img src="/img/pic/drill/small/Koronka po keramike art 576230 newe ru.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat299.shtml"
