--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -903,3 +903,14 @@
         <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 70 ЗИМНЯЯ,</span>
         <span class="addt"> 880 мл</span>
       </p></a></td></table>
+<table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/drill/big/Koronka po keramike art 576230 newe ru.jpg" title="Большое фото: Алмазные коронки по керамограниту и керамике 'HAGWERT'">
+      <img src="/img/pic/drill/small/Koronka po keramike art 576230 newe ru.jpg" width="98"></a></td>
+    <td class="good-txt"><a href="/catalog/cat299.shtml"
+      title="Свёрла и коронки по стеклу и керамике на нашем сайте">
+      <p>
+        <span class="title">Алмазные коронки по керамограниту<br>и керамике</span><span class="dop"> HAGWERT</span>
+        <span class="addt"><br>в сборе с центрирующим сверлом</span>
+      </p></a></td></table>
