--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>08 фев:  <DD><a href="/catalog/cat231.shtml" title="Новый товар:&#xa;Карандаш малярный Ultima&#xa;180 мм, уп. 12 шт."><span class="title">Карандаш малярный</span><span class="dop"> ULTIMA</span></a><br>
   <DT>01 фев:  <DD><a href="/catalog/cat191.shtml" title="Новые товары:&#xa;Пистолет для монтажной пены Ultima Lite;&#xa;Профессиональный пистолет для монтажной пены&#xa;    SILA Pro с тефлоновым покрытием"><span class="title">Пистолеты</span><span class="dop"> для монтаж. пены</span></a><br>
   <DT>13 янв:  <DD><a href="/catalog/cat248.shtml" title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Омеднённый инструмент</span><span class="dop"></span></a><br>
   <DT>12 янв:  <DD><a href="/catalog/cat55.shtml"  title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Гаечные ключи</span><span class="dop"></span></a><br>
@@ -9,9 +10,6 @@
   <DT>30 дек:  <DD><a href="/catalog/cat47.shtml"  title="Цены снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ BERGEN"><span class="title">Буры по бетону SDS+</span><span class="dop"> BERGEN</span></a><br>
   <DT>22 дек:  <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Клей монтажный SILFIX StrongClear прозрачный, 290 мл"><span class="title">Клей монтажный</span><span class="dop"> SILFIX</span></a><br>
   <DT>03 ноя:  <DD><a href="/catalog/cat440.shtml" title="Новый товар:&#xa;Салфетки влажные антибактериальные,&#xa;в упаковках по 100 штук"><span class="title">Салфетки</span><span class="dop"> антибактериальные</span></a><br>
-  <DT>26 окт:  <DD><a href="/catalog/cat496.shtml" title="Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 8х70 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">Болты</span></a>, <a href="/catalog/cat495.shtml" title="Гайки ГОСТ 5915-70 оцинкованные,&#xa;резьба от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">гайки</span></a>, <a href="/catalog/cat494.shtml" title="Шайбы оцинкованные, плоские и увеличеннные,&#xa;под резьбу от 6 до 12 мм,&#xa;расфасованные в упаковки 10 - 50 шт."><span class="title">шайбы</span></a><br>
-  <DT>22 окт:  <DD><a href="/catalog/cat227.shtml" title="Новый товар:&#xa;Фонарь-прожектор аккумуляторный светодиодный&#xa;КОСМОС K-9199, 12 LED, дальность свечения 100 метров"><span class="title">Фонарь светодиодный</span><span class="dop"> КОСМОС</span></a><br>
-  <DT>12 окт:  <DD><a href="/catalog/cat139.shtml" title="Новый товар:&#xa;Молоток слесарный VOLKSHAMMER, 0.5 кг"><span class="title">Молоток слесар.</span><span class="dop"> Volkshammer</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
