--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>18 фев:  <DD><a href="/catalog/cat100.shtml" title="Снижены цены значительной части товарных групп"><span class="title">Производственный инвентарь</span><span class="dop"></span></a><br>
+  <DT>17 фев:  <DD><a href="/catalog/cat85.shtml"  title="Снижены цены большинства товаров"><span class="title">Средства защиты</span><span class="dop"></span></a><br>
   <DT>08 фев:  <DD><a href="/catalog/cat231.shtml" title="Новый товар:&#xa;Карандаш малярный Ultima&#xa;180 мм, уп. 12 шт."><span class="title">Карандаш малярный</span><span class="dop"> ULTIMA</span></a><br>
   <DT>01 фев:  <DD><a href="/catalog/cat191.shtml" title="Новые товары:&#xa;Пистолет для монтажной пены Ultima Lite;&#xa;Профессиональный пистолет для монтажной пены&#xa;    SILA Pro с тефлоновым покрытием"><span class="title">Пистолеты</span><span class="dop"> для монтаж. пены</span></a><br>
   <DT>13 янв:  <DD><a href="/catalog/cat248.shtml" title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Омеднённый инструмент</span><span class="dop"></span></a><br>
@@ -9,7 +11,6 @@
   <DT>31 дек:  <DD>Диски <a href="/catalog/cat29.shtml" title="Новый ассортимент:&#xa;Диски пильные BERGEN и РОСОМАХА"><span class="title">пильные</span></a> и <a href="/catalog/cat28.shtml" title="Новый ассортимент:&#xa;Диски алмазные BERGEN и РОСОМАХА"><span class="title">алмазные</span></a><br>
   <DT>30 дек:  <DD><a href="/catalog/cat47.shtml"  title="Цены снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ BERGEN"><span class="title">Буры по бетону SDS+</span><span class="dop"> BERGEN</span></a><br>
   <DT>22 дек:  <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Клей монтажный SILFIX StrongClear прозрачный, 290 мл"><span class="title">Клей монтажный</span><span class="dop"> SILFIX</span></a><br>
-  <DT>03 ноя:  <DD><a href="/catalog/cat440.shtml" title="Новый товар:&#xa;Салфетки влажные антибактериальные,&#xa;в упаковках по 100 штук"><span class="title">Салфетки</span><span class="dop"> антибактериальные</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
