--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,7 +1,9 @@
 <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>24 фев:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span></a> и <a href="/catalog/cat194.shtml" title="Цена снижена:&#xa;Очиститель для монтажной пены ULTIMA"><span class="title">очиститель</span></a><br>
+  <DT>25 фев:  <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на популярные позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>24 фев:  <DD><a href="/catalog/cat301.shtml" title="Цены снижены"><span class="title">Строительные уровни</span><span class="dop"></span></a><br>
+  <DT>24 фев:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span></a> и <a href="/catalog/cat194.shtml" title="Цена снижена:&#xa;Очиститель для монтажной пены ULTIMA"><span class="title">очиститель</span></a><br>
+  <DT>24 фев:  <DD><a href="/catalog/cat163.shtml" title="Цены снижены"><span class="title">Строительные ведра</span></a><br>
   <DT>24 фев:  <DD><a href="/catalog/cat512.shtml" title="Цены снижены:&#xa;Кельмы бетонщика, печника, штукатура"><span class="title">Кельмы</span><span class="dop"> HOBBI</span></a><br>
   <DT>18 фев:  <DD><a href="/catalog/cat100.shtml" title="Снижены цены значительной части товарных групп"><span class="title">Производственный инвентарь</span><span class="dop"></span></a><br>
   <DT>17 фев:  <DD><a href="/catalog/cat85.shtml"  title="Снижены цены большинства товаров"><span class="title">Средства защиты</span><span class="dop"></span></a><br>
