--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>01 мар:  <DD><a href="/catalog/cat209.shtml" title="Расширен ассортимент:&#xa;новые свёрла стеклу, керамике и керамограниту&#xa;РОСОМАХА Quadro, 4 режущие грани"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
   <DT>25 фев:  <DD><a href="/catalog/cat24.shtml"  title="Цены снижены на популярные позиции:&#xa;Круги отрезные по металлу&#xa;пр-ва Лужского Абразивного завода"><span class="title">Круги отрезные по металлу</span><span class="dop"></span></a><br>
   <DT>24 фев:  <DD><a href="/catalog/cat301.shtml" title="Цены снижены"><span class="title">Строительные уровни</span><span class="dop"></span></a><br>
   <DT>24 фев:  <DD><a href="/catalog/cat175.shtml" title="Цены снижены"><span class="title">Монтажная пена</span></a> и <a href="/catalog/cat194.shtml" title="Цена снижена:&#xa;Очиститель для монтажной пены ULTIMA"><span class="title">очиститель</span></a><br>
@@ -11,8 +12,6 @@
   <DT>01 фев:  <DD><a href="/catalog/cat191.shtml" title="Новые товары:&#xa;Пистолет для монтажной пены Ultima Lite;&#xa;Профессиональный пистолет для монтажной пены&#xa;    SILA Pro с тефлоновым покрытием"><span class="title">Пистолеты</span><span class="dop"> для монтаж. пены</span></a><br>
   <DT>13 янв:  <DD><a href="/catalog/cat248.shtml" title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Омеднённый инструмент</span><span class="dop"></span></a><br>
   <DT>12 янв:  <DD><a href="/catalog/cat55.shtml"  title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Гаечные ключи</span><span class="dop"></span></a><br>
-  <DT>06 янв:  <DD><a href="/catalog/cat230.shtml" title="Цены снижены и расширен ассортимент:&#xa;Свёрла по металлу BERGEN"><span class="title">Свёрла</span></a> <a href="/catalog/cat415.shtml"  title="Расширен ассортимент:&#xa;Свёрла по металлу BERGEN твердосплавные кобальтовые"><span class="title">по металлу</span><span class="dop"> BERGEN</span></a><br>
-  <DT>04 янв:  <DD><a href="/catalog/cat48.shtml"  title="Цены снижены:&#xa;Буры по бетону для перфоратора SDS Max BERGEN"><span class="title">Буры по бетону SDS Max</span><span class="dop"> BERGEN</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
