--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,8 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>06 янв:  <DD><a href="/catalog/cat230.shtml" title="Цены снижены и расширен ассортимент:&#xa;Свёрла по металлу BERGEN"><span class="title">Свёрла</span></a> <a href="/catalog/cat415.shtml"  title="Расширен ассортимент:&#xa;Свёрла по металлу BERGEN твердосплавные кобальтовые"><span class="title">по металлу</span><span class="dop"> BERGEN</span></a><br>
+  <DT>04 янв:  <DD><a href="/catalog/cat48.shtml"  title="Цены снижены:&#xa;Буры по бетону для перфоратора SDS Max BERGEN"><span class="title">Буры по бетону SDS Max</span><span class="dop"> BERGEN</span></a><br>
+  <!-- ^ 2020 ^ -->
   <DT>31 дек:  <DD>Диски <a href="/catalog/cat29.shtml" title="Новый ассортимент:&#xa;Диски пильные BERGEN и РОСОМАХА"><span class="title">пильные</span></a> и <a href="/catalog/cat28.shtml" title="Новый ассортимент:&#xa;Диски алмазные BERGEN и РОСОМАХА"><span class="title">алмазные</span></a><br>
   <DT>30 дек:  <DD><a href="/catalog/cat47.shtml"  title="Цены снижены и расширен ассортимент:&#xa;Буры по бетону для перфоратора SDS+ BERGEN"><span class="title">Буры по бетону SDS+</span><span class="dop"> BERGEN</span></a><br>
   <DT>22 дек:  <DD><a href="/catalog/cat270.shtml" title="Новый товар:&#xa;Клей монтажный SILFIX StrongClear прозрачный, 290 мл"><span class="title">Клей монтажный</span><span class="dop"> SILFIX</span></a><br>
