--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,5 +1,7 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>13 янв:  <DD><a href="/catalog/cat248.shtml" title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Омеднённый инструмент</span><span class="dop"></span></a><br>
+  <DT>12 янв:  <DD><a href="/catalog/cat55.shtml"  title="Снижены цены и расширен ассортимент части товарных групп"><span class="title">Гаечные ключи</span><span class="dop"></span></a><br>
   <DT>06 янв:  <DD><a href="/catalog/cat230.shtml" title="Цены снижены и расширен ассортимент:&#xa;Свёрла по металлу BERGEN"><span class="title">Свёрла</span></a> <a href="/catalog/cat415.shtml"  title="Расширен ассортимент:&#xa;Свёрла по металлу BERGEN твердосплавные кобальтовые"><span class="title">по металлу</span><span class="dop"> BERGEN</span></a><br>
   <DT>04 янв:  <DD><a href="/catalog/cat48.shtml"  title="Цены снижены:&#xa;Буры по бетону для перфоратора SDS Max BERGEN"><span class="title">Буры по бетону SDS Max</span><span class="dop"> BERGEN</span></a><br>
   <!-- ^ 2020 ^ -->
