--- a/msgtpl/1-brands.html
+++ b/msgtpl/1-brands.html
@@ -9,14 +9,20 @@
   <tr>
     <td><a href="https://newe.ru/catalog/cat506.shtml"><img src="pix/hardy_l1.gif"><br>Инструменты "Hardy"</a></td>
     <td><a href="https://newe.ru/catalog/cat518.shtml"><img src="pix/scley_l1.gif"><br>Скотчи, ленты "Scley"</a></td>
+    <!--<editor-fold desc="TE2">-->
     <td><a href="https://newe.ru/catalog/cat45.shtml" ><img src="pix/speld_l1.gif"><br>Электроды "Спецэлектрод"</a></td>
+    <!--</editor-fold>-->
   </tr>
 </table>
 <table style="width: 600px; border: none; text-align: center">
   <tr>
+    <!--region THdy-->
     <td><a href="https://newe.ru/catalog/cat506.shtml"><img src="https://yadi.sk/i/sSaM8eCK3KuPds"><br>Инструменты "Hardy"</a></td>
+    <!--endregion-->
     <td><a href="https://newe.ru/catalog/cat518.shtml"><img src="https://yadi.sk/i/SAA6bZPt3KuPnk"><br>Скотчи, ленты "Scley"</a></td>
+    <!--<editor-fold desc="testSEld">-->
     <td><a href="https://newe.ru/catalog/cat45.shtml" ><img src="https://yadi.sk/i/yv6LJQO63KuPq9"><br>Электроды "Спецэлектрод"</a></td>
+    <!--</editor-fold>-->
   </tr>
 </table>
 <table style="width: 600px; border: none;">
