--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
 <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>16 мар:  <DD><a href="/catalog/cat128.shtml" title="Новые товары:&#xa;Ножовки по сырой древесине REMOQUICK&#xa;крупный зуб, 400 и 500 мм"><span class="title">Ножовки по сырой древесине</span><span class="dop"></span></a><br>
   <DT>05 мар:  <DD><a href="/catalog/cat245.shtml" title="Новый товар:&#xa;Электроудлинитель силовой универсальный&#xa;30 м на пластиковой катушке,&#xa;3.5 кВт (16 А), термоустойчивый ПВС 3 &#215; 2.5 кв.мм ГОСТ,&#xa;4 розетки  с заземлением, IP44"><span class="title">Удлинитель 30 м 4 роз. 16 А</span><span class="dop"></span></a><br>
   <DT>02 мар:  <DD><a href="/catalog/cat514.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Миксеры (насадки на миксер) универсальные"><span class="title">Миксеры</span><span class="dop"> (насадки на миксер)</span></a><br>
   <DT>01 мар:  <DD><a href="/catalog/cat209.shtml" title="Расширен ассортимент:&#xa;новые свёрла стеклу, керамике и керамограниту&#xa;РОСОМАХА Quadro, 4 режущие грани"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
